fix: all my shit
- rewrite text fields & settings modal
- invisible media controls
- wrong user area spacing

--- a/src/content/sidebar/user-panel.scss
+++ b/src/content/sidebar/user-panel.scss
@@ -60,10 +60,14 @@
 	}
 }
 
-.panelTitleContainer__37e49 > div {
-	@extend %title-3;
+.panelTitleContainer__37e49 {
+	margin: 0;
 
-	color: var(--window_fg_color);
+	& > div {
+		@extend %title-3;
+
+		color: var(--window_fg_color);
+	}
 }
 
 .rtcConnectionStatus__06d62 .button__201d5 {
