--- a/src/controls/text-fields.scss
+++ b/src/controls/text-fields.scss
@@ -1,54 +1,29 @@
 @use "controls";
 @use "util";
 
-// #region Search input
-
-/// Class names have to be included by their entire name for easier usage with
-/// the change_classes.js script.
-@mixin -search-input($container, $input, $inner) {
-	#{$container} {
-		@include controls.text-field;
-	}
-
-	#{$input} {
-		font-size: var(--document-font-size);
-		line-height: 1;
-		padding: 0;
-		margin: 0;
-
-		height: inherit;
-	}
-
-	#{$inner} {
-		gap: 9px;
-		padding: 0;
-
-		flex-direction: row-reverse;
-	}
-}
-
-// Settings sidebar
-@include -search-input(".container_fea832", ".input_fea832", ".inner_fea832");
-
-// Home page
-@include -search-input(".container_a45028", ".input_a45028", ".inner_a45028");
-
-.iconContainer__0c4c4 {
-	display: none;
-}
-
-.iconLayout__0c4c4 {
-	@include util.icon("loupe-large");
-}
-
-// #endregion
-
 .container__0f084 {
-	all: unset;
+	@include controls.text-field;
 
-	display: flex;
+	gap: 9px;
 
-	.input__0ed4f {
-		@include controls.text-field;
-	}
+	min-height: unset;
+}
+
+// legacy
+.input__0ed4f {
+	@include controls.text-field;
+
+	// + 1px
+	line-height: 1.25;
+}
+
+.input__0f084 {
+	// D*scord forgot to reset the default styles
+	padding: 0;
+}
+
+.icon__0f084 {
+	@include util.icon("loupe-large");
+
+	border: none;
 }
