--- a/src/dialogs/settings/window.scss
+++ b/src/dialogs/settings/window.scss
@@ -120,25 +120,6 @@
 	display: none;
 }
 
-.layer__960e4 {
-	opacity: 1;
-
-	&[aria-hidden="true"] {
-		pointer-events: none;
-		transform: none;
-
-		&::before {
-			content: "";
-
-			position: fixed;
-			inset: 0;
-
-			background-color: var(--backdrop);
-			z-index: 101;
-		}
-	}
-}
-
 .layers__960e4 {
 	--p: calc((100% - var(--settings-dialog-size)) / 2);
 	--weird-offset: 1px;
@@ -147,12 +128,14 @@
 		--weird-offset: 2px;
 	}
 
-	& > :not(:only-child):last-child {
-		box-shadow: var(--elevation-high);
-		border: 1px solid var(--window_outline_color);
-		border-radius: var(--window_radius);
+	.systemBar_c38106.show_c38106 + div &::before {
+		content: "";
 
-		inset: var(--p);
+		position: fixed;
+		inset: 0;
+
+		background-color: var(--backdrop);
+		z-index: 101;
 	}
 }
 
@@ -213,7 +196,13 @@
 }
 
 .standardSidebarView__23e6b {
-	top: var(--headerbar-height);
+	box-shadow: var(--elevation-high);
+	border: 1px solid var(--window_outline_color);
+	border-radius: var(--window_radius);
+	padding-top: var(--headerbar-height);
+
+	overflow: hidden;
+	inset: var(--p);
 }
 
 .tools__23e6b {
